refactor: project-wide modernization and spring grpc migration
- Migrate all services from net.devh to org.springframework.grpc
- Update test infrastructure to use MockitoBean and modern test starters
- Refactor Search service domain models to Java Records
- Convert CatalogVersion to Java Record for immutability
- Apply final modifiers and clean up imports project-wide
- Synchronize gRPC client configurations in config-server